unpackaged/main/default/objects/SBQQ__RecordJob__c/fields/SBQQ__JobStatus__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__JobStatus__c</fullName>
    <description>The status of the background job performed if no job id was specified.</description>
    <inlineHelpText>Le statut de la tâche d’arrière-plan exécutée si aucun ID de tâche n’a été spécifié.</inlineHelpText>
    <label>Job Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>