unpackaged/main/default/objects/SBQQ__RecordJob__c/fields/SBQQ__Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Stacktrace__c</fullName>
    <description>The stacktrace for the error that caused the record job to fail.</description>
    <inlineHelpText>La trace de pile de la tâche exécutée en arrière-plan si aucun ID de tâche n&#39;a été spécifié.</inlineHelpText>
    <label>Stacktrace</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>